--- a/BigShool/BigShool.csproj
+++ b/BigShool/BigShool.csproj
@@ -215,6 +215,10 @@
     <Compile Include="Migrations\202006050810128_PopulateCategoryTable.Designer.cs">
       <DependentUpon>202006050810128_PopulateCategoryTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202006190811466_AddNameColumnToApplicationUser.cs" />
+    <Compile Include="Migrations\202006190811466_AddNameColumnToApplicationUser.Designer.cs">
+      <DependentUpon>202006190811466_AddNameColumnToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -225,6 +229,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CourseViewModel.cs" />
+    <Compile Include="ViewModels\FutureDate.cs" />
+    <Compile Include="ViewModels\ValidTime.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -308,6 +314,9 @@
     <EmbeddedResource Include="Migrations\202006050810128_PopulateCategoryTable.resx">
       <DependentUpon>202006050810128_PopulateCategoryTable.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006190811466_AddNameColumnToApplicationUser.resx">
+      <DependentUpon>202006190811466_AddNameColumnToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -327,7 +336,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50443</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:50444/</IISUrl>
+          <IISUrl>http://localhost:50441/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
